--- a/app/views/calculation_templates/square_form.html.erb
+++ b/app/views/calculation_templates/square_form.html.erb
@@ -1,1 +1,8 @@
 <h1>Howdy</h1>
+
+<form>
+  <label for="giraffe">Enter a number</label>
+  <input id="giraffe" placeholder="Type a number" name="elephant">
+
+  <button>Calculate square</button>
+</form>
