--- a/app/views/calculation_templates/square_form.html.erb
+++ b/app/views/calculation_templates/square_form.html.erb
@@ -1,6 +1,6 @@
 <h1>Howdy</h1>
 
-<form>
+<form action="/square/results">
   <label for="giraffe">Enter a number</label>
   <input id="giraffe" placeholder="Type a number" name="elephant">
 
