--- a/app/views/calculation_templates/square_results_form.html.erb
+++ b/app/views/calculation_templates/square_results_form.html.erb
@@ -1,1 +1,9 @@
-<h1>Square results</h1>
+<h1>Square Results</h1>
+
+<dl>
+  <dt>Number</dt>
+  <dd><%= @num %></dd>
+
+  <dt>Square</dt>
+  <dd><%= @square_of_num %></dd>
+</dl>
