--- a/app/views/calculation_templates/rand_results.html.erb
+++ b/app/views/calculation_templates/rand_results.html.erb
@@ -1,4 +1,4 @@
-<h1>hi</h1>
+<h1>Random Results</h1>
 
 <dl>
   <dt>Minimum</dt>
@@ -12,4 +12,4 @@
 
 </dl>
 
-<a href = "/rand/new">Pick another random number</a>
+<a href = "/random/new">Pick another random number</a>
