three of four working

--- a/app/views/calculation_templates/sqrt_results.html.erb
+++ b/app/views/calculation_templates/sqrt_results.html.erb
@@ -10,4 +10,4 @@
 
 </dl>
 
-<a href = "/sqrt/new">Calculate another square root</a>
+<a href = "/square_root/new">Calculate another square root</a>
