--- a/app/views/calculation_templates/square_form.html.erb
+++ b/app/views/calculation_templates/square_form.html.erb
@@ -1,6 +1,10 @@
 <form action="/square/results">
-  <label for="giraffe">Enter a number</label>
-  <input id="giraffe" placeholder="Type a number" name="elephant">
+  <div>
+    <label for="giraffe">Enter a number</label>
+    <input id="giraffe" placeholder="Type a number" name="elephant">
+  </div>  
 
-  <button>Calculate square</button>
+  <div>
+    <button>Calculate square</button>
+  </div>
 </form>
