--- a/app/views/calculation_templates/pmt_results.html.erb
+++ b/app/views/calculation_templates/pmt_results.html.erb
@@ -2,7 +2,7 @@
 
 <dl>
   <dt>APR</dt>
-  <dd><%= @rate_ann.to_s(:percentage) %></dd>
+  <dd><%= @rate_ann %>%</dd>
 
   <dt>Number of years</dt>
   <dd><%= @years %></dd>
